@@ -1,1 +1,1 @@
-#define KPPPVERSION "0.8.1"
+#define KPPPVERSION "0.8.2"
